<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Fundo_app"
    tools:context=".ProdutoActivity">

    <Button
        android:id="@+id/buttonCadastrarProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Botao"
        android:onClick="onCadastrarProduto"
        android:text="@string/botao_valor5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.687"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.679" />

    <Button
        android:id="@+id/buttonVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Botao"
        android:onClick="onVoltar"
        android:text="@string/botao_valor4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.679" />

    <EditText
        android:id="@+id/editTextDescricao"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:background="@color/Botao"
        android:backgroundTint="@color/Botao"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/text_valor1"
        android:inputType="textPersonName"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="163dp" />

    <EditText
        android:id="@+id/editTextPreco"
        android:layout_width="wrap_content"
        android:layout_height="45sp"
        android:layout_marginTop="24dp"
        android:background="@color/Botao"
        android:backgroundTint="@color/Botao"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/text_valor3"
        android:inputType="textPersonName"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCategoria" />

    <EditText
        android:id="@+id/editTextCategoria"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:background="@color/Botao"
        android:backgroundTint="@color/Botao"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/text_valor2"
        android:inputType="textPersonName"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescricao" />

    <EditText
        android:id="@+id/editTextQuantidadeProduto"
        android:layout_width="wrap_content"
        android:layout_height="45sp"
        android:layout_marginTop="28dp"
        android:background="@color/Botao"
        android:backgroundTint="@color/Botao"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/text_valor4"
        android:inputType="textPersonName"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPreco" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="127dp"
        android:layout_height="134dp"
        app:srcCompat="@drawable/ic_baseline_phone_android_24"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>