<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Fundo_app"
    tools:context=".VendaActivity">

    <Button
        android:id="@+id/buttonCadastrarVenda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Botao"
        android:text="@string/botao_valor5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.743"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.679" />

    <Button
        android:id="@+id/buttonVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Botao"
        android:onClick="onVoltar"
        android:text="@string/botao_valor4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.679" />


    <EditText
        android:id="@+id/editTextQuantidadeVenda"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:background="@color/Botao"
        android:backgroundTint="@color/Botao"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/text_valor4"
        android:inputType="textPersonName"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextData" />

    <EditText
        android:id="@+id/editTextData"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="44dp"
        android:background="@color/Botao"
        android:backgroundTint="@color/Botao"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/text_valor9"
        android:inputType="textPersonName"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="119dp"
        android:layout_height="129dp"
        app:srcCompat="@drawable/ic_baseline_monetization_on_24"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>