<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Fundo_app"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnProduto"
        android:layout_width="163dp"
        android:layout_height="72dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/Botao"
        android:drawableLeft="@drawable/icone_cadastro"
        android:gravity="center"
        android:text="@string/botao_valor1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <Button
        android:id="@+id/btnCliente"
        android:layout_width="163dp"
        android:layout_height="72dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/Botao"
        android:drawableLeft="@drawable/icone_cadastro"
        android:gravity="center"
        android:text="@string/botao_valor2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVenda" />

    <Button
        android:id="@+id/btnVenda"
        android:layout_width="163dp"
        android:layout_height="72dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/Botao"
        android:drawableLeft="@drawable/icone_cadastro"
        android:gravity="center"
        android:text="@string/botao_valor3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnProduto" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="137dp"
        android:layout_height="127dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icone_loja" />

</androidx.constraintlayout.widget.ConstraintLayout>